[package]
name = "layout_traits"
version = "0.0.1"
authors = ["The Servo Project Developers"]

[lib]
name = "layout_traits"
path = "lib.rs"

[dependencies.gfx]
path = "../gfx"

[dependencies.script_traits]
path = "../script_traits"

[dependencies.msg]
path = "../msg"

[dependencies.net_traits]
path = "../net_traits"

[dependencies.profile]
path = "../profile"

[dependencies.util]
path = "../util"

[dependencies.session_types]
git = "https://github.com/Munksgaard/session-types.git"
branch = "for-servo"

[dependencies]
url = "0.2.16"
